@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-05T00:57:15Z",
-  "count_outdated" : 917,
-  "uniques_outdated" : 524,
+  "timestamp" : "2025-05-06T00:54:35Z",
+  "count_outdated" : 918,
+  "uniques_outdated" : 525,
   "count" : 929,
   "uniques" : 536,
   "clones" : [
-    {
-      "timestamp": "2025-04-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-23T00:00:00Z",
       "count": 1,
